deploy: b864abb2dc5f8acb4c5c44c1e6b307a089e1ea78

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a4e9ca3c",
+   "id": "f38cff5e",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f052e629",
+   "id": "7ea99688",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c1b20f6",
+   "id": "b56a6e0b",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae0f4db9",
+   "id": "bf59095a",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e13b2166",
+   "id": "fec4a0a1",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92e79c6a",
+   "id": "1324f1ff",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5ffbc045",
+   "id": "280ec407",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:23:05.445192Z",
-     "iopub.status.busy": "2025-02-03T14:23:05.444755Z",
-     "iopub.status.idle": "2025-02-03T14:23:08.432177Z",
-     "shell.execute_reply": "2025-02-03T14:23:08.431642Z"
+     "iopub.execute_input": "2025-02-03T14:34:57.826837Z",
+     "iopub.status.busy": "2025-02-03T14:34:57.826641Z",
+     "iopub.status.idle": "2025-02-03T14:35:00.780104Z",
+     "shell.execute_reply": "2025-02-03T14:35:00.779566Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ac75c75",
+   "id": "0d7c1592",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e83ff2eb",
+   "id": "1db06870",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a6929df",
+   "id": "9ba04092",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7d0f21f",
+   "id": "bac2c896",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e92068b5",
+   "id": "6a898ec4",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa2d2dd2",
+   "id": "8c29afd3",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bffa3fb",
+   "id": "28561415",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42c3f2b9",
+   "id": "81aa689d",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "85dfa2db",
+   "id": "12318d78",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:23:08.434510Z",
-     "iopub.status.busy": "2025-02-03T14:23:08.434056Z",
-     "iopub.status.idle": "2025-02-03T14:23:10.305326Z",
-     "shell.execute_reply": "2025-02-03T14:23:10.304724Z"
+     "iopub.execute_input": "2025-02-03T14:35:00.782376Z",
+     "iopub.status.busy": "2025-02-03T14:35:00.782011Z",
+     "iopub.status.idle": "2025-02-03T14:35:02.670821Z",
+     "shell.execute_reply": "2025-02-03T14:35:02.670259Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79c5da96",
+   "id": "77a80287",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "94ba8ef3",
+   "id": "9db5f70f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:23:10.307140Z",
-     "iopub.status.busy": "2025-02-03T14:23:10.306951Z",
-     "iopub.status.idle": "2025-02-03T14:23:10.310357Z",
-     "shell.execute_reply": "2025-02-03T14:23:10.309825Z"
+     "iopub.execute_input": "2025-02-03T14:35:02.672708Z",
+     "iopub.status.busy": "2025-02-03T14:35:02.672522Z",
+     "iopub.status.idle": "2025-02-03T14:35:02.676236Z",
+     "shell.execute_reply": "2025-02-03T14:35:02.675655Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9dc7649",
+   "id": "14f5661a",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bea1d725",
+   "id": "9c5c7a93",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b92b870",
+   "id": "4166788d",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77a2190f",
+   "id": "c4de37cf",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "21d3ebac",
+   "id": "bec3ff29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:23:10.312147Z",
-     "iopub.status.busy": "2025-02-03T14:23:10.311831Z",
-     "iopub.status.idle": "2025-02-03T14:23:10.354553Z",
-     "shell.execute_reply": "2025-02-03T14:23:10.353992Z"
+     "iopub.execute_input": "2025-02-03T14:35:02.678106Z",
+     "iopub.status.busy": "2025-02-03T14:35:02.677664Z",
+     "iopub.status.idle": "2025-02-03T14:35:02.721895Z",
+     "shell.execute_reply": "2025-02-03T14:35:02.721351Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e2d2948",
+   "id": "2a4efe6e",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f7a93b6e",
+   "id": "41acfdec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:23:10.356512Z",
-     "iopub.status.busy": "2025-02-03T14:23:10.356174Z",
-     "iopub.status.idle": "2025-02-03T14:23:10.420198Z",
-     "shell.execute_reply": "2025-02-03T14:23:10.419689Z"
+     "iopub.execute_input": "2025-02-03T14:35:02.723761Z",
+     "iopub.status.busy": "2025-02-03T14:35:02.723581Z",
+     "iopub.status.idle": "2025-02-03T14:35:02.789671Z",
+     "shell.execute_reply": "2025-02-03T14:35:02.789156Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f401eb84",
+   "id": "11a6bc5c",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b07584a",
+   "id": "f2377d04",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3c4fba7c",
+   "id": "cb314654",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:23:10.421978Z",
-     "iopub.status.busy": "2025-02-03T14:23:10.421805Z",
-     "iopub.status.idle": "2025-02-03T14:23:10.447279Z",
-     "shell.execute_reply": "2025-02-03T14:23:10.446731Z"
+     "iopub.execute_input": "2025-02-03T14:35:02.791729Z",
+     "iopub.status.busy": "2025-02-03T14:35:02.791372Z",
+     "iopub.status.idle": "2025-02-03T14:35:02.817303Z",
+     "shell.execute_reply": "2025-02-03T14:35:02.816794Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb668e0a",
+   "id": "0c087a09",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cb2eb7d",
+   "id": "959e0ec5",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48c41821",
+   "id": "c202c927",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94b1567c",
+   "id": "843d89db",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fd21d77",
+   "id": "917278be",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c3c4ef20",
+   "id": "b904ee79",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:23:10.449371Z",
-     "iopub.status.busy": "2025-02-03T14:23:10.449027Z",
-     "iopub.status.idle": "2025-02-03T14:23:10.452888Z",
-     "shell.execute_reply": "2025-02-03T14:23:10.452370Z"
+     "iopub.execute_input": "2025-02-03T14:35:02.819303Z",
+     "iopub.status.busy": "2025-02-03T14:35:02.818918Z",
+     "iopub.status.idle": "2025-02-03T14:35:02.822893Z",
+     "shell.execute_reply": "2025-02-03T14:35:02.822306Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0090da2",
+   "id": "ce5139bc",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8dc2d7d2",
+   "id": "327bcbbb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:23:10.454644Z",
-     "iopub.status.busy": "2025-02-03T14:23:10.454322Z",
-     "iopub.status.idle": "2025-02-03T14:23:10.457337Z",
-     "shell.execute_reply": "2025-02-03T14:23:10.456732Z"
+     "iopub.execute_input": "2025-02-03T14:35:02.824655Z",
+     "iopub.status.busy": "2025-02-03T14:35:02.824315Z",
+     "iopub.status.idle": "2025-02-03T14:35:02.827205Z",
+     "shell.execute_reply": "2025-02-03T14:35:02.826651Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accef416",
+   "id": "87d30063",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e2da6ea8",
+   "id": "5febd849",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:23:10.459063Z",
-     "iopub.status.busy": "2025-02-03T14:23:10.458747Z",
-     "iopub.status.idle": "2025-02-03T14:23:12.997092Z",
-     "shell.execute_reply": "2025-02-03T14:23:12.996498Z"
+     "iopub.execute_input": "2025-02-03T14:35:02.828979Z",
+     "iopub.status.busy": "2025-02-03T14:35:02.828614Z",
+     "iopub.status.idle": "2025-02-03T14:35:05.384860Z",
+     "shell.execute_reply": "2025-02-03T14:35:05.384265Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4423911",
+   "id": "fea56719",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8474c7c9",
+   "id": "d1f477ae",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "974d042d",
+   "id": "088d2cfd",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca5c1f55",
+   "id": "04617e60",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e24ee29c",
+   "id": "47638dcd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:23:12.999193Z",
-     "iopub.status.busy": "2025-02-03T14:23:12.998846Z",
-     "iopub.status.idle": "2025-02-03T14:23:13.002515Z",
-     "shell.execute_reply": "2025-02-03T14:23:13.002041Z"
+     "iopub.execute_input": "2025-02-03T14:35:05.387656Z",
+     "iopub.status.busy": "2025-02-03T14:35:05.387469Z",
+     "iopub.status.idle": "2025-02-03T14:35:05.391276Z",
+     "shell.execute_reply": "2025-02-03T14:35:05.390621Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f9918563e20>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fe562c1c9a0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbfe7f7b",
+   "id": "f5b3ad5c",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af35c243",
+   "id": "a841a0c8",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12a4dca4",
+   "id": "550c9cea",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ca68144",
+   "id": "7effce19",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c7bb1cda",
+   "id": "43051920",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:23:13.004514Z",
-     "iopub.status.busy": "2025-02-03T14:23:13.004158Z",
-     "iopub.status.idle": "2025-02-03T14:23:13.007190Z",
-     "shell.execute_reply": "2025-02-03T14:23:13.006743Z"
+     "iopub.execute_input": "2025-02-03T14:35:05.393045Z",
+     "iopub.status.busy": "2025-02-03T14:35:05.392853Z",
+     "iopub.status.idle": "2025-02-03T14:35:05.395819Z",
+     "shell.execute_reply": "2025-02-03T14:35:05.395217Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "db2582a1",
+   "id": "7fdff52c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:23:13.008816Z",
-     "iopub.status.busy": "2025-02-03T14:23:13.008529Z",
-     "iopub.status.idle": "2025-02-03T14:23:14.069906Z",
-     "shell.execute_reply": "2025-02-03T14:23:14.069358Z"
+     "iopub.execute_input": "2025-02-03T14:35:05.397480Z",
+     "iopub.status.busy": "2025-02-03T14:35:05.397306Z",
+     "iopub.status.idle": "2025-02-03T14:35:06.452455Z",
+     "shell.execute_reply": "2025-02-03T14:35:06.451905Z"
     }
    },
    "outputs": [
