deploy: 18d9c4bcee3596ae9e1d9194ba317f1ee4c5e0bd

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f38cff5e",
+   "id": "0e9fbfdc",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ea99688",
+   "id": "a8c4a80d",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b56a6e0b",
+   "id": "4aa4f22c",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf59095a",
+   "id": "5b7ebc12",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fec4a0a1",
+   "id": "c3ae877c",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1324f1ff",
+   "id": "841aa456",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "280ec407",
+   "id": "ccad0c32",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:34:57.826837Z",
-     "iopub.status.busy": "2025-02-03T14:34:57.826641Z",
-     "iopub.status.idle": "2025-02-03T14:35:00.780104Z",
-     "shell.execute_reply": "2025-02-03T14:35:00.779566Z"
+     "iopub.execute_input": "2025-02-03T14:55:44.443567Z",
+     "iopub.status.busy": "2025-02-03T14:55:44.443398Z",
+     "iopub.status.idle": "2025-02-03T14:55:47.477525Z",
+     "shell.execute_reply": "2025-02-03T14:55:47.477005Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d7c1592",
+   "id": "a09e3604",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1db06870",
+   "id": "28efada8",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ba04092",
+   "id": "df6fda6b",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bac2c896",
+   "id": "b432992b",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a898ec4",
+   "id": "68df9cfa",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c29afd3",
+   "id": "4d6e76da",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28561415",
+   "id": "c8e017b7",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81aa689d",
+   "id": "c8f234fa",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "12318d78",
+   "id": "5f911a30",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:35:00.782376Z",
-     "iopub.status.busy": "2025-02-03T14:35:00.782011Z",
-     "iopub.status.idle": "2025-02-03T14:35:02.670821Z",
-     "shell.execute_reply": "2025-02-03T14:35:02.670259Z"
+     "iopub.execute_input": "2025-02-03T14:55:47.479911Z",
+     "iopub.status.busy": "2025-02-03T14:55:47.479428Z",
+     "iopub.status.idle": "2025-02-03T14:55:49.408710Z",
+     "shell.execute_reply": "2025-02-03T14:55:49.408184Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77a80287",
+   "id": "a97e6869",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9db5f70f",
+   "id": "8df7ad15",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:35:02.672708Z",
-     "iopub.status.busy": "2025-02-03T14:35:02.672522Z",
-     "iopub.status.idle": "2025-02-03T14:35:02.676236Z",
-     "shell.execute_reply": "2025-02-03T14:35:02.675655Z"
+     "iopub.execute_input": "2025-02-03T14:55:49.410810Z",
+     "iopub.status.busy": "2025-02-03T14:55:49.410400Z",
+     "iopub.status.idle": "2025-02-03T14:55:49.414027Z",
+     "shell.execute_reply": "2025-02-03T14:55:49.413431Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14f5661a",
+   "id": "11ecff00",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c5c7a93",
+   "id": "5fe366dc",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4166788d",
+   "id": "97804bbf",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4de37cf",
+   "id": "58b7fc8b",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bec3ff29",
+   "id": "cffa3fc9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:35:02.678106Z",
-     "iopub.status.busy": "2025-02-03T14:35:02.677664Z",
-     "iopub.status.idle": "2025-02-03T14:35:02.721895Z",
-     "shell.execute_reply": "2025-02-03T14:35:02.721351Z"
+     "iopub.execute_input": "2025-02-03T14:55:49.416068Z",
+     "iopub.status.busy": "2025-02-03T14:55:49.415715Z",
+     "iopub.status.idle": "2025-02-03T14:55:49.460380Z",
+     "shell.execute_reply": "2025-02-03T14:55:49.459876Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a4efe6e",
+   "id": "ca3fe8f3",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "41acfdec",
+   "id": "108b0e35",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:35:02.723761Z",
-     "iopub.status.busy": "2025-02-03T14:35:02.723581Z",
-     "iopub.status.idle": "2025-02-03T14:35:02.789671Z",
-     "shell.execute_reply": "2025-02-03T14:35:02.789156Z"
+     "iopub.execute_input": "2025-02-03T14:55:49.462331Z",
+     "iopub.status.busy": "2025-02-03T14:55:49.461959Z",
+     "iopub.status.idle": "2025-02-03T14:55:49.529508Z",
+     "shell.execute_reply": "2025-02-03T14:55:49.528976Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11a6bc5c",
+   "id": "cbddd8f0",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2377d04",
+   "id": "5c4278af",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cb314654",
+   "id": "990cc386",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:35:02.791729Z",
-     "iopub.status.busy": "2025-02-03T14:35:02.791372Z",
-     "iopub.status.idle": "2025-02-03T14:35:02.817303Z",
-     "shell.execute_reply": "2025-02-03T14:35:02.816794Z"
+     "iopub.execute_input": "2025-02-03T14:55:49.531585Z",
+     "iopub.status.busy": "2025-02-03T14:55:49.531199Z",
+     "iopub.status.idle": "2025-02-03T14:55:49.558995Z",
+     "shell.execute_reply": "2025-02-03T14:55:49.558475Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c087a09",
+   "id": "7360da94",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "959e0ec5",
+   "id": "57846eb5",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c202c927",
+   "id": "beb85ec7",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "843d89db",
+   "id": "7e7b2d88",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "917278be",
+   "id": "e491e6ff",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b904ee79",
+   "id": "1588c878",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:35:02.819303Z",
-     "iopub.status.busy": "2025-02-03T14:35:02.818918Z",
-     "iopub.status.idle": "2025-02-03T14:35:02.822893Z",
-     "shell.execute_reply": "2025-02-03T14:35:02.822306Z"
+     "iopub.execute_input": "2025-02-03T14:55:49.560992Z",
+     "iopub.status.busy": "2025-02-03T14:55:49.560799Z",
+     "iopub.status.idle": "2025-02-03T14:55:49.564896Z",
+     "shell.execute_reply": "2025-02-03T14:55:49.564301Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce5139bc",
+   "id": "dfe44946",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "327bcbbb",
+   "id": "c8020953",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:35:02.824655Z",
-     "iopub.status.busy": "2025-02-03T14:35:02.824315Z",
-     "iopub.status.idle": "2025-02-03T14:35:02.827205Z",
-     "shell.execute_reply": "2025-02-03T14:35:02.826651Z"
+     "iopub.execute_input": "2025-02-03T14:55:49.566517Z",
+     "iopub.status.busy": "2025-02-03T14:55:49.566342Z",
+     "iopub.status.idle": "2025-02-03T14:55:49.569191Z",
+     "shell.execute_reply": "2025-02-03T14:55:49.568705Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87d30063",
+   "id": "dc9fc8b9",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5febd849",
+   "id": "42b104f0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:35:02.828979Z",
-     "iopub.status.busy": "2025-02-03T14:35:02.828614Z",
-     "iopub.status.idle": "2025-02-03T14:35:05.384860Z",
-     "shell.execute_reply": "2025-02-03T14:35:05.384265Z"
+     "iopub.execute_input": "2025-02-03T14:55:49.570864Z",
+     "iopub.status.busy": "2025-02-03T14:55:49.570672Z",
+     "iopub.status.idle": "2025-02-03T14:55:52.147201Z",
+     "shell.execute_reply": "2025-02-03T14:55:52.146711Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fea56719",
+   "id": "d5d58922",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1f477ae",
+   "id": "fb039adf",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "088d2cfd",
+   "id": "c4a7c15f",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04617e60",
+   "id": "75f7c423",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "47638dcd",
+   "id": "936736f2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:35:05.387656Z",
-     "iopub.status.busy": "2025-02-03T14:35:05.387469Z",
-     "iopub.status.idle": "2025-02-03T14:35:05.391276Z",
-     "shell.execute_reply": "2025-02-03T14:35:05.390621Z"
+     "iopub.execute_input": "2025-02-03T14:55:52.149489Z",
+     "iopub.status.busy": "2025-02-03T14:55:52.149099Z",
+     "iopub.status.idle": "2025-02-03T14:55:52.152841Z",
+     "shell.execute_reply": "2025-02-03T14:55:52.152148Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fe562c1c9a0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fe3f89d3e20>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5b3ad5c",
+   "id": "ba3125c0",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a841a0c8",
+   "id": "473d4d75",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "550c9cea",
+   "id": "162c0491",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7effce19",
+   "id": "1307fc9d",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "43051920",
+   "id": "18939702",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:35:05.393045Z",
-     "iopub.status.busy": "2025-02-03T14:35:05.392853Z",
-     "iopub.status.idle": "2025-02-03T14:35:05.395819Z",
-     "shell.execute_reply": "2025-02-03T14:35:05.395217Z"
+     "iopub.execute_input": "2025-02-03T14:55:52.154843Z",
+     "iopub.status.busy": "2025-02-03T14:55:52.154481Z",
+     "iopub.status.idle": "2025-02-03T14:55:52.157480Z",
+     "shell.execute_reply": "2025-02-03T14:55:52.156909Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7fdff52c",
+   "id": "15ec1660",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:35:05.397480Z",
-     "iopub.status.busy": "2025-02-03T14:35:05.397306Z",
-     "iopub.status.idle": "2025-02-03T14:35:06.452455Z",
-     "shell.execute_reply": "2025-02-03T14:35:06.451905Z"
+     "iopub.execute_input": "2025-02-03T14:55:52.159348Z",
+     "iopub.status.busy": "2025-02-03T14:55:52.159010Z",
+     "iopub.status.idle": "2025-02-03T14:55:53.216909Z",
+     "shell.execute_reply": "2025-02-03T14:55:53.216319Z"
     }
    },
    "outputs": [
